# embedded_sdk

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  autoforge.agent.json  pyproject.toml  requirements-dev.txt
src/auto_forge/: __init__.py  __main__.py  auto_forge.py  logger.py  settings.py
src/auto_forge/builders/: README.md  cmake_builder.py  make_builder.py
src/auto_forge/builders/analyzers/: gcc_log_analyzer.py
src/auto_forge/commands/: README.md  ai_command.py  cli_command_interface.py  deploy_command.py  edit_command.py  hello_world_command.py  lsd_command.py  mini_west_command.py  overlay_command.py  proxy_race_command.py  refactor_command.py  relocator_command.py  sig_tool.py  sig_tool_command.py  sln_command.py  sln_commands.py  start_command.py  xray_command.py  zephyr_sdk.py  zephyr_sdk_command.py  zephyr_tools_command.py
src/auto_forge/commands/help/: relocate_example.jsonc
src/auto_forge/common/: README.md  crypto.py  local_types.py  pretty_json_printer.py  pretty_printer.py  progress_tracker.py  protocols.py  registry.py  shell_aliases.py  summary_patcher.py  system_info.py  toolbox.py  version_compare.py  watchdog.py
src/auto_forge/config/: README.md  auto_forge.json  auto_forge.jsonc  environment.jsonc  signature_schema.jsonc  solution.jsonc  solution_schema.jsonc
src/auto_forge/config/bare_solution/: solution.jsonc
src/auto_forge/config/help/builder/: gcc-arm.txt  make.txt
src/auto_forge/config/schema/1.0/: signature.jsonc
src/auto_forge/config/schemas/1.0/: signatures.jsonc  solution.jsonc  variables.jsonc
src/auto_forge/core/: README.md  ai.py  ai_bridge.py  binary_signatures.py  bootstrap.py  build_shell.py  commands.py  commands_loader.py  dynamic_loader.py  environment.py  gui.py  json_processor.py  jsonc_processor.py  linux_aliases.py  loader.py  logger.py  mcp_service.py  platform.py  platform_tools.py  processor.py  prompt.py  prompt_engine.py  registry.py  relocate.py  setup_tools.py  shell_aliases.py  signatures.py  solution.py  solution_processor.py  system_info.py  telemetry.py  toolbox.py  variables.py  watchdog.py  west_world.py  xray.py
src/auto_forge/core/interfaces/: builder_interfcae.py  cli_command_interface.py  command_interface.py  core_module_interface.py
src/auto_forge/core/protocols/: context.py  protocols.py
src/auto_forge/resources/bootstrap_example/: project_bootstrap.jsonc
src/auto_forge/resources/demo_project/: auto_boot.sh  auto_go.sh  environment.jsonc  relocate.jsonc  setup.jsonc  solution.jsonc  teamlogo.txt  variables.jsonc  workspace_init.sh
src/auto_forge/resources/help/builder/: arm_cross_gcc.md  cmake.md  gcc-x64.md  make.md  ninja.md
src/auto_forge/resources/help/commands/: deploy.md  overlay.md  refactor.md  relocator.md
src/auto_forge/resources/help/motd/: motd.md
src/auto_forge/resources/help/package/: about.md  data_reorg.md  dependencies.md  q_n_a.md  sequence.md
src/auto_forge/resources/help/solution/: guide.md  toolchain.md
src/auto_forge/resources/initiator/: workspace_init.sh
src/auto_forge/resources/samples/btop/: environment.jsonc  solution.jsonc  variables.jsonc
src/auto_forge/resources/samples/demo/: .gitignore  environment.jsonc  first_run.jsonc  solution.jsonc  variables.jsonc
src/auto_forge/resources/samples/top/: environment.jsonc  solution.jsonc
src/auto_forge/resources/samples/userspace/: README.md  aliases.jsonc  deploy.jsonc  environment.jsonc  overlay.jsonc  refactor.jsonc  relocate.jsonc  solution.jsonc  variables.jsonc  workspace_sequence.jsonc
src/auto_forge/resources/samples/userspace/commands/: hello_world.py
src/auto_forge/resources/samples/userspace/help/commands/: hello.md
src/auto_forge/resources/shared/: README.md  banner.txt  bootstrap.sh  dev_set.sh  env.sh  installer.sh  team_logo.txt  textual_md_viewer.py
src/auto_forge/resources/shared/viewers/: json_viewer.py  md_viewer.py
src/auto_forge/resources/shared/volt/: batman.txt  robin.txt
