# Script:       pyproject.toml
# Description:  auto_forge package configuration

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_forge"
version = "1.1.2"
description = "AutoForge: YABS (yet another build system tool)"
readme = "README.md"
authors = [{ name = "AutoForge team", email = "team@auto_forge.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]
requires-python = ">=3.9"  # Requires Python 3.9 or later
dependencies = [
    "wheel==0.43.0",
    "colorama>=0.4.6",
    "rich>=13.7,<14.0",
    "tabulate==0.9.0",
    "psutil>=5.9",
    "toml==0.10.2",
    "gitpython>=3.1.40",
    "jsonpath-ng>=1.5.3",
    "json5==0.9.14",
    "jsonschema>=4.21.1",
    "pyaml==23.12.0",
    "ruamel.yaml>=0.18.6",
    "GitPython==3.1.40",
    "prompt_toolkit>=3.0.43",
    "cmd2>=2.4.3"
]

[project.urls]
homepage = "https://github.com/emichael72/auto_forge.git"
repository = "https://github.com/emichael72/auto_forge.git"

[project.scripts]
autoforge = "auto_forge.__main__:main"

[tool.setuptools]
platforms = ["linux"]
package-dir = { "" = "src" }
packages = [
    "auto_forge",
    "auto_forge.core",
    "auto_forge.common",
    "auto_forge.commands",
]

# Extended package properties should only be placed here to ensure compliance with PEP 621.
[tool.autoforge_metadata]
fancy_name = "AutoForge"
