# Script:       pyproject.toml
# Description:  AutoForge package configuration.

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_forge"
version = "0.2.0"
description = "AutoForge: Bulid System"
readme = "README.md"
authors = [{ name = "Michaelson, Eitan", email = "eitanm@me.com" }]
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"]
requires-python = ">=3.9,<=3.12.10" # Tested with Python 3.9 up to 3.12

# Notes:
#   1. Most of the dependencies below are pinned to specific versions known to work reliably.
#      If you plan to use different versions, make sure they don't introduce dependency conflicts between packages.
#   2. 'tkinter' must be installed via the system package manager (not pip).
#   3. The Markdown viewer requires Textual v0.4.0.0 Do not upgrade since v5+ breaks Markdown rendering.

dependencies = [
    "packaging>=20.0",
    "wheel==0.43.0",
    "opentelemetry-api==1.36.0",
    "opentelemetry-sdk==1.36.0",
    "colorama==0.4.6",
    "rich==13.9.4",
    "tabulate==0.9.0",
    "pyfiglet==1.0.3",
    "psutil==7.0.0",
    "toml==0.10.2",
    "gitpython>=3.1.40",
    "jsonpath-ng==1.7.0",
    "json5==0.9.14",
    "jsonschema==4.25.0",
    "pyaml==23.12.0",
    "ruamel.yaml==0.18.14",
    "GitPython==3.1.45",
    "prompt_toolkit==3.0.51",
    "jmespath==0.10.0",
    "pynput==1.8.1",
    "openai==1.30.5",
    "cryptography==45.0.6",
    "Pygments==2.19.2",
    "tree-sitter == 0.25.0",
    "tree-sitter-bash==0.25.0",
    "tree-sitter-groovy==0.1.2",
    "tree-sitter-python==0.23.6",
    "tree-sitter-c==0.24.1",
    "tiktoken==0.10.0",
    "textual==4.0.0",
    "aiohttp==3.12.15",
    "cmd2==2.3.3"]

[project.urls]
homepage = "https://github.com/emichael72/auto_forge.git"
repository = "https://github.com/emichael72/auto_forge.git"

[project.scripts]
autoforge = "auto_forge.__main__:main"

[tool.setuptools]
platforms = ["linux"]
package-dir = { "" = "src" }
packages = ["auto_forge",
    "auto_forge.core",
    "auto_forge.core.interfaces",
    "auto_forge.core.protocols",
    "auto_forge.common",
    "auto_forge.commands",
    "auto_forge.builders",
    "auto_forge.builders.analyzers"
]

# AI agent initial context 
[tool.setuptools.data-files]
"." = ["autoforge.agent.json"]

# Extended package properties should only be placed here to ensure compliance with PEP 621.
[tool.autoforge_metadata]
fancy_name = "AutoForge"

